-fixed grid image issue -fixed layout shift on input hover -changed btn border color

--- a/src/Components/header/header.scss
+++ b/src/Components/header/header.scss
@@ -137,7 +137,7 @@ header{
 	align-items: center;
 	justify-content: space-between;
 	background: transparent;
-	padding: 28px 10%;
+	padding: 35px 10%;
 	transition: all .50s ease;
 	text-align: center;
 	position: relative;
