--- a/src/index.css
+++ b/src/index.css
@@ -63,11 +63,11 @@ lord-icon {
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--highlight-color);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--accent);
 }
 
 
@@ -96,7 +96,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: var(--accent);
 }
 button:focus,
 button:focus-visible {
@@ -109,7 +109,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: var(--accent);
   }
   button {
     background-color: #f9f9f9;
